--- a/client/src/components/LoginSignup.css
+++ b/client/src/components/LoginSignup.css
@@ -7,3 +7,23 @@
     padding-bottom: 30px;
 }
 
+.header{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap:9px;
+    width: 100%;
+    margin-top: 30px;
+}
+
+.text{
+    color:#3c009d;
+    font-size: 700;
+}
+
+.underlin{
+    width: 61px;
+    height: 6px;
+    background:#3c009d;
+    border-radius:9x;
+}
